[project]
name = "mortgage_refinery"
version = "0.1.0"
description = "Notify me when to refinance my mortgage..."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "mypy[requests]>=1.18.2",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20250913",
]
